<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_post_no_image"
    app:cardElevation="5dp"
    android:layout_marginBottom="30dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/account"
                android:id="@+id/post_profile">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/post_username"
                android:textStyle="bold"
                android:layout_marginStart="10sp"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_text"
                android:layout_marginTop="4dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <ImageButton
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:id="@+id/btnPostLike"
                android:contentDescription="@string/profile"
                android:src="@drawable/heart"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_likes"
                android:gravity="center">
            </TextView>
            <ImageButton
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:id="@+id/btnPostComment"
                android:contentDescription="@string/profile"
                android:src="@drawable/comment"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_comment"
                android:gravity="center">
            </TextView>

            <ImageButton
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:id="@+id/btnPostShare"
                android:contentDescription="@string/profile"
                android:src="@drawable/share"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_share"
                android:gravity="center">
            </TextView>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

