<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_post"
    app:cardElevation="5dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    tools:context=".ProfileFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/background"
            android:id="@+id/profile_background">

        </ImageView>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/account_big"
            android:layout_below="@+id/profile_background"
            android:layout_margin="16dp"
            android:id="@+id/profile_picture"
            android:layout_centerHorizontal="true">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_name"
            android:layout_below="@+id/profile_picture"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="16dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_gmail"
            android:layout_below="@+id/profile_name"
            android:text="@string/profile_gmail"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginBottom="8dp">

        </TextView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_logout"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        tools:context=".ProfileFragment"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20sp">

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/logout"
                android:src="@drawable/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textLogout"
                android:layout_below="@+id/btnLogout"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp">
            </TextView>

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="207dp"
                android:layout_toEndOf="@id/btnLogout"
                android:background="@null"
                android:contentDescription="@string/logout"
                android:src="@drawable/edit" />

            <TextView
                android:id="@+id/textEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnEdit"
                android:layout_marginStart="217dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/textLogout"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>